--- a/pubman/pubman_presentation/src/main/webapp/editItem/DetailGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/DetailGroup.jspf
@@ -153,7 +153,7 @@
 		</h:panelGroup>
 
 <%-- Identifier --%>
-		<tr:iterator var="identifier" value="#{EditItem.identifierCollection.identifierManager.objectDM}" rendered="#{!(genre.details_identifiers_display == 'false' && genre.details_identifiers_form_id == 'full-submission' || genre.details_identifiers_display == 'false' && genre.details_identifiers_form_id == 'all')}">
+		<tr:iterator id="iterDetailGroupIdentifier" var="identifier" value="#{EditItem.identifierCollection.identifierManager.objectDM}" rendered="#{!(genre.details_identifiers_display == 'false' && genre.details_identifiers_form_id == 'full-submission' || genre.details_identifiers_display == 'false' && genre.details_identifiers_form_id == 'all')}">
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 				<b class="xLarge_area0_p8 endline labelLine clear">
 					&#160;<h:outputText id="txtIdentifier" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.details_identifiers_optional != 'true' && (genre.details_identifiers_item_identifier_type_optional != 'true' || genre.details_identifiers_item_identifier_value_optional != 'true')}" /><h:outputText value="#{genre.details_identifiers_label}" rendered="#{EditItem.identifierCollection.identifierManager.objectDM.rowIndex == 0}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
