--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/contextList.jspf
@@ -35,7 +35,7 @@ All rights reserved. Use is subject to license terms.
 	TODO: There is another contextList.jspf under /list. One of the two should be removed.
  -->
 
-<tr:iterator var="context" value="#{ContextListSessionBean.depositorContextList}" binding="#{ContextListSessionBean.contextIterator}" varStatus="index">
+<tr:iterator id="iterDepositorContextList" var="context" value="#{ContextListSessionBean.depositorContextList}" binding="#{ContextListSessionBean.contextIterator}" varStatus="index">
 
 	<h:panelGroup layout="block" styleClass="full_area0 itemHeader noTopBorder" rendered="#{ContextListSessionBean.contextIterator.rowIndex == 0}">
 		<span class="xLarge_area0 endline">
@@ -44,7 +44,7 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:commandLink id="lnkSelectForEasySubmission1" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
+				<h:commandLink id="lnkSelectForEasySubmissionFirst" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
 					<h:outputText value="#{context.name}"/>
 				</h:commandLink>
 			</b>
@@ -57,7 +57,7 @@ All rights reserved. Use is subject to license terms.
 		<span class="seperator"></span>
 		<span class="free_area0_p8 endline itemHeadline">
 			<b>
-				<h:commandLink id="lnkSelectForEasySubmission" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
+				<h:commandLink id="lnkSelectForEasySubmissionFollowing" title="#{tip.EasySubmission_select}" action="#{context.selectForEasySubmission}">
 					<h:outputText value="#{context.name}"/>
 				</h:commandLink>
 			</b>
