--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/CreatorCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/CreatorCollection.jspf
@@ -57,7 +57,7 @@
 
 <%-- Copy&Paste Organisations for Authors --%>
 
-			<h:dataTable styleClass="free_area0" var="pasteOrga" value="#{EasySubmissionSessionBean.authorCopyPasteOrganizationsCreatorBean.personOrganisationManager.objectDM}">
+			<h:dataTable id="iterauthorCopyPasteOrganizations" styleClass="free_area0" var="pasteOrga" value="#{EasySubmissionSessionBean.authorCopyPasteOrganizationsCreatorBean.personOrganisationManager.objectDM}">
 				<h:column>
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder">
 					<b class="xLarge_area0_p8 endline labelLine clear">
@@ -92,7 +92,7 @@
 				<h:commandButton id="btnAddAuthors" styleClass="free_txtBtn groupBtn sectionTool" value="#{lbl.EditItem_btnAddAuthors}" action="#{EasySubmission.addCreatorString}" />
 			</h:panelGroup>
 	</h:panelGroup>
-	<h:dataTable styleClass="free_area0"  var="creatorBean" value="#{EasySubmission.creatorCollection.creatorManager.objectDM}">
+	<h:dataTable id="iterCreatorCollection" styleClass="free_area0"  var="creatorBean" value="#{EasySubmission.creatorCollection.creatorManager.objectDM}">
     	<h:column>
 		<div class="suggestAnchor">
 <%-- Creator role --%>
@@ -165,7 +165,7 @@
 
 <%-- Creator person affiliation --%>
 			<h:panelGroup rendered="#{!(genre.creator_person_organization_creator_organizations_display == 'false' && genre.creator_person_organization_creator_organizations_form_id == 'easy-submission' || genre.creator_person_organization_creator_organizations_display == 'false' && genre.creator_person_organization_creator_organizations_form_id == 'all')}">
-				<h:dataTable styleClass="free_area0" var="persOrga" value="#{creatorBean.personOrganisationManager.objectDM}" rendered="#{creatorBean.personType}">
+				<h:dataTable id="iterCreatorPersonOrganisation" styleClass="free_area0" var="persOrga" value="#{creatorBean.personOrganisationManager.objectDM}" rendered="#{creatorBean.personType}">
 					<h:column>
 					<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'easy-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}">
 						<b class="xLarge_area0_p8 endline labelLine clear">
